Added more instructions in mail when deleting account

--- a/src/main/resources/i18n/messages_ja.properties
+++ b/src/main/resources/i18n/messages_ja.properties
@@ -254,7 +254,7 @@ backend.mail.userdata.subject=ユーザーデータのリクエスト
 backend.mail.userdata.body=ユーザーデータのリクエストこんにちは{0}, <br> あなたは{1}のデータのコピーを要求しました。
 
 backend.mail.account-delete-request.subject=アカウントの削除
-backend.mail.account-delete-request.body=こんにちは{0}、<br> {1}のアカウントの削除依頼をされていますね。アカウントを永久に削除したい場合は、以下のリンクを参照してください：{2}/delete-account/{3}。
+backend.mail.account-delete-request.body=こんにちは{0}、<br> {1}のアカウントの削除依頼をされていますね。アカウントを永久に削除したい場合は、以下のリンクを参照してください：{2}/delete-account/{3}。 このリンクは24時間以内に利用可能となり、24時間有効となります。
 
 backend.mail.account-delete-confirm.subject=アカウント削除
 backend.mail.account-delete-confirm.body=こんにちは{0}、<br> {1}のアカウントを削除しました。気が変わったらいつでも新しいアカウントを作ることができます。またのご連絡をお待ちしております :)
