--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -254,7 +254,7 @@ backend.mail.userdata.subject=O seu pedido de dados de utilizador
 backend.mail.userdata.body=Olá {0}, <br> Pediu uma cópia dos seus dados em {1}.
 
 backend.mail.account-delete-request.subject=Apagar a sua conta
-backend.mail.account-delete-request.body=Olá {0}, <br> Pediu que a sua conta fosse apagada em {1}. Por favor, visite o seguinte link se desejar apagar a sua conta permanentemente: {2}/delete-account/{3}
+backend.mail.account-delete-request.body=Olá {0}, <br> Pediu que a sua conta fosse apagada em {1}. Por favor, visite o seguinte link se desejar apagar a sua conta permanentemente: {2}/delete-account/{3}. A ligação estará disponível em 24 horas e será válida por 24 horas.
 
 backend.mail.account-delete-confirm.subject=Eliminação de conta
 backend.mail.account-delete-confirm.body=Olá {0}, <br> Apagámos a sua conta em {1}. Pode sempre criar uma nova conta se mudar de ideias. Esperamos ouvir de si novamente :)
