--- a/src/main/resources/i18n/messages_zh.properties
+++ b/src/main/resources/i18n/messages_zh.properties
@@ -254,7 +254,7 @@ backend.mail.userdata.subject=您对用户数据的要求
 backend.mail.userdata.body=您好{0}，<br>您在{1}申请了一份您的资料。
 
 backend.mail.account-delete-request.subject=刪除您的帳戶
-backend.mail.account-delete-request.body=您好{0}，<br>您要求删除您在{1}的账户。如果您想永久删除您的账户，请访问以下链接：{2}/delete-account/{3}。
+backend.mail.account-delete-request.body=您好{0}，<br>您要求删除您在{1}的账户。如果您想永久删除您的账户，请访问以下链接：{2}/delete-account/{3}。该链接将在24小时内开通，有效期为24小时。
 
 backend.mail.account-delete-confirm.subject=账户删除
 backend.mail.account-delete-confirm.body=您好{0}，<br>我们已经删除了您在{1}的账户。如果您改变主意，您可以随时创建一个新的账户。我们希望再次收到您的来信：)
