--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -256,7 +256,7 @@ backend.mail.userdata.subject=Your user data request
 backend.mail.userdata.body=Hello {0}, <br> You have requested receive a copy of your user data at {1}.
 
 backend.mail.account-delete-request.subject=Deleting your account
-backend.mail.account-delete-request.body=Hello {0}, <br> You have requested to have your account deleted at {1}. Please visit the following link if you wish to delete your account permanently: {2}/delete-account/{3}
+backend.mail.account-delete-request.body=Hello {0}, <br> You have requested to have your account deleted at {1}. Please visit the following link if you wish to delete your account permanently: {2}/delete-account/{3}. The link will be available in 24 hours and valid for 24 hours.
 
 backend.mail.account-delete-confirm.subject=Account deletion
 backend.mail.account-delete-confirm.body=Hello {0}, <br> We have deleted your account at {1}. You can always create a new account if you change your mind. We hope to hear from you again :)
