--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -254,7 +254,7 @@ backend.mail.userdata.subject=Deine Anforderung der Benutzerdaten
 backend.mail.userdata.body=Hallo {0}, <br> You hast eine Kopie deiner Daten bei {1} beantragt.
 
 backend.mail.account-delete-request.subject=Deleting your account
-backend.mail.account-delete-request.body=Hallo {0}, <br> Du hast die Löschung Deines Kontos bei {1} beantragt. Bitte besuche den folgenden Link, wenn du dein Konto dauerhaft löschen lassen möchtest: {2}/delete-account/{3}
+backend.mail.account-delete-request.body=Hallo {0}, <br> Du hast die Löschung Deines Kontos bei {1} beantragt. Bitte besuche den folgenden Link, wenn du dein Konto dauerhaft löschen lassen möchtest: {2}/delete-account/{3}. Der Link wird in 24 Stunden verfügbar und 24 Stunden lang gültig sein.
 
 backend.mail.account-delete-confirm.subject=Kontolöschung
 backend.mail.account-delete-confirm.body=Hallo {0}, <br> Wir haben dein Konto bei {1} gelöscht. Du kannst jederzeit ein neues Konto erstellen, falls du deine Meinung änderst. Wir hoffen wieder von dir zu hören :)
