--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -254,7 +254,7 @@ backend.mail.userdata.subject=Su solicitud de datos de usuario
 backend.mail.userdata.body=Hola {0}, <br> Ha solicitado una copia de sus datos en {1}.
 
 backend.mail.account-delete-request.subject=Eliminación de su cuenta
-backend.mail.account-delete-request.body=Hola {0}, <br> Ha solicitado que se elimine su cuenta en {1}. Por favor, visite el siguiente enlace si desea eliminar su cuenta de forma permanente: {2}/delete-account/{3}
+backend.mail.account-delete-request.body=Hola {0}, <br> Ha solicitado que se elimine su cuenta en {1}. Por favor, visite el siguiente enlace si desea eliminar su cuenta de forma permanente: {2}/delete-account/{3}. El enlace estará disponible en 24 horas y será válido durante 24 horas.
 
 backend.mail.account-delete-confirm.subject=Eliminación de la cuenta
 backend.mail.account-delete-confirm.body=Hola {0}, <br> Hemos borrado su cuenta en {1}. Siempre puedes crear una nueva cuenta si cambias de opinión. Esperamos tener noticias suyas de nuevo :)
