--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -254,7 +254,7 @@ backend.mail.userdata.subject=Votre demande de données d'utilisateur
 backend.mail.userdata.body=Bonjour {0}, <br> Vous avez demandé une copie de vos données à {1}.
 
 backend.mail.account-delete-request.subject=Suppression de votre compte
-backend.mail.account-delete-request.body=Bonjour {0}, <br> Vous avez demandé la suppression de votre compte à {1}. Veuillez consulter le lien suivant si vous souhaitez supprimer votre compte de manière permanente : {2}/delete-account/{3}
+backend.mail.account-delete-request.body=Bonjour {0}, <br> Vous avez demandé la suppression de votre compte à {1}. Veuillez consulter le lien suivant si vous souhaitez supprimer votre compte de manière permanente : {2}/delete-account/{3}. Le lien sera disponible dans 24 heures et valable pendant 24 heures.
 
 backend.mail.account-delete-confirm.subject=Suppression de compte
 backend.mail.account-delete-confirm.body=Bonjour {0}, <br> Nous avons supprimé votre compte à {1}. Vous pouvez toujours créer un nouveau compte si vous changez d'avis. Nous espérons avoir de vos nouvelles :)
