--- a/src/main/resources/i18n/messages_ko.properties
+++ b/src/main/resources/i18n/messages_ko.properties
@@ -254,7 +254,7 @@ backend.mail.userdata.subject=사용자 데이터 요청
 backend.mail.userdata.body={0} 님, 안녕하세요. <br> {1}에서 데이터 사본을 요청하셨습니다.
 
 backend.mail.account-delete-request.subject=계정 삭제
-backend.mail.account-delete-request.body={0} 님, 안녕하세요. <br> {1}에서 계정 삭제를 요청하셨습니다. 계정을 영구적으로 삭제하려면 다음 링크를 방문하십시오. {2}/delete-account/{3}
+backend.mail.account-delete-request.body={0} 님, 안녕하세요. <br> {1}에서 계정 삭제를 요청하셨습니다. 계정을 영구적으로 삭제하려면 다음 링크를 방문하십시오. {2}/delete-account/{3}. 링크는 24 시간 내에 사용할 수 있으며 24 시간 동안 유효합니다.
 
 backend.mail.account-delete-confirm.subject=계정 삭제
 backend.mail.account-delete-confirm.body={0} 님, 안녕하세요. <br> {1}에서 귀하의 계정을 삭제했습니다. 마음이 바뀌면 언제든지 새 계정을 만들 수 있습니다. 다시 여러분의 의견을 기다리겠습니다. :)
