Updated Bulma Sliders UI improvements Set max age to 99 instead of 100, because it would make UI uglier because of 3 digits instead of 2. Make slogan English only

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -97,7 +97,7 @@ donate.donate-now=Donate now
 
 index.cookie.notice=This site uses cookies to store the session and user preferences to function properly. Your data is safe with us, as we don't store any personal information in the cookies nor do we send any information to a third party. By continuing to use this site you agree to the use of cookies.
 index.cookie.more=Click here to learn more
-index.subtitle=The platform that is specifically built for meeting new people and forming relationships
+index.subtitle=Meet amazing people around you, privately!
 
 index.free.title=Forever free
 index.free.description=This platform does not require you to pay any kind of fee, you are free to use all features without limitations. We solely rely on your generous donations to keep this platform running.
