Change default search sort

--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -22,11 +22,12 @@ comment=Bemerkung
 contact=Kontakt
 
 dark=Dunkel
+default=Standard
 description=Beschreibung
 distance=Distanz
 dob=Geburtsdatum
 donate=Spenden
-donated=Gespendet
+donations=Spenden
 
 email=E-mail
 
@@ -177,7 +178,6 @@ search.max-distance=Maximale Entfernung
 search.sort.filter.distance=Kleinster Abstand
 search.sort.filter.active=Zuletzt aktiv
 search.sort.filter.interests=Interessen
-search.sort.filter.donations=Spenden
 search.donation.popup=Möchtest du spenden? Jeder Cent hilft uns, neue Benutzer zu erreichen und neue Funktionen hinzuzufügen, um dein Erlebnis zu verbessern!
 search.js.error.no-geolocation=Dein Browser unterstützt keine HTML5-Geolokalisierung. Bitte versuche es mit einem anderen Browser.
 search.js.error.no-location=Position konnte nicht ermittelt werden. Stell sicher, dass Du dein GPS angeschaltet ist.
