--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -22,11 +22,13 @@ comment=Comentario
 contact=Contacto
 
 dark=Dark
+default=Por defecto
 description=Descripción
 distance=Distancia
 dob=Fecha de nacimiento
 donate=Donaciones
 donated=Donado
+donations=Donaciones
 
 email=E-mail
 
@@ -177,7 +179,6 @@ search.max-distance=La distancia máxima
 search.sort.filter.distance=La distancia más pequeña
 search.sort.filter.active=El último activo
 search.sort.filter.interests=Intereses
-search.sort.filter.donations=Donaciones
 search.donation.popup=¿Quiere donar? Cada céntimo nos ayuda a llegar a nuevos usuarios y a añadir nuevas funciones para mejorar tu experiencia.
 search.js.error.no-geolocation=Su navegador no soporta la geolocalización HTML5. Por favor, intente con otro navegador.
 search.js.error.no-location=No se ha podido determinar la posición. Asegúrate de que tu GPS está encendido.
