--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -22,11 +22,13 @@ comment=Commentaire
 contact=Contactez
 
 dark=Dunkel
+default=Défaut
 description=Foncé
 distance=Distance
 dob=Date de naissance
 donate=Dons
 donated=Donné
+donations=Dons
 
 email=E-mail
 
@@ -177,7 +179,6 @@ search.max-distance=Distance maximale
 search.sort.filter.distance=La plus petite distance
 search.sort.filter.active=Dernière activité
 search.sort.filter.interests=Intérêts
-search.sort.filter.donations=Dons
 search.donation.popup=Vous voulez faire un don? Chaque centime nous aide à atteindre de nouveaux utilisateurs et à ajouter de nouvelles fonctionnalités pour améliorer votre expérience!
 search.js.error.no-geolocation=Votre navigateur ne prend pas en charge la géolocalisation HTML5. Veuillez essayer un autre navigateur.
 search.js.error.no-location=La position n'a pas pu être déterminée. Assurez-vous que votre GPS est allumé.
