--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -22,11 +22,13 @@ comment=Commento
 contact=Contatto
 
 dark=Scuro
+default=Default
 description=Descrizione
 distance=Distanza
 dob=Data di nascita
 donate=Donazioni
 donated=Donato
+donations=Donazioni
 
 email=E-mail
 
@@ -177,7 +179,6 @@ search.max-distance=Distanza massima
 search.sort.filter.distance=Distanza minima
 search.sort.filter.active=Ultimo attivo
 search.sort.filter.interests=Interessi
-search.sort.filter.donations=Donazioni
 search.donation.popup=Vuoi donare? Ogni centesimo ci aiuta a raggiungere nuovi utenti e ad aggiungere nuove funzionalità per migliorare la tua esperienza!
 search.js.error.no-geolocation=Il tuo browser non supporta la geolocalizzazione HTML5. Si prega di provare un altro browser.
 search.js.error.no-location=Non è stato possibile determinare la posizione. Si assicuri che il suo GPS sia acceso.
