--- a/src/main/resources/i18n/messages_ja.properties
+++ b/src/main/resources/i18n/messages_ja.properties
@@ -22,11 +22,13 @@ comment=コメント
 contact=連絡先
 
 dark=暗い
+default=デフォルト
 description=説明
 distance=距離
 dob=生年月日
 donate=寄付金
 donated=寄贈された
+donations=寄付金
 
 email=電子メール
 
@@ -177,7 +179,6 @@ search.max-distance=最大距離
 search.sort.filter.distance=最短距離
 search.sort.filter.active=最後のアクティブ
 search.sort.filter.interests=関心事
-search.sort.filter.donations=寄付金
 search.donation.popup=寄付をしたいですか？すべてのセントは、私たちが新しいユーザーに到達し、あなたの経験を向上させるための新機能を追加するのに役立ちます。
 search.js.error.no-geolocation=お使いのブラウザはHTML5ジオロケーションをサポートしていません。別のブラウザをお試しください。
 search.js.error.no-location=ポジションは決定できませんでした。GPSがオンになっていることを確認してください。
