--- a/src/main/resources/i18n/messages_ko.properties
+++ b/src/main/resources/i18n/messages_ko.properties
@@ -22,11 +22,13 @@ comment=논평
 contact=접촉
 
 dark=어두운
+default=기본
 description=기술
 distance=거리
 dob=생년월일
 donate=기부하다
 donated=기부
+donations=기부하다
 
 email=이메일
 
@@ -177,7 +179,6 @@ search.max-distance=최대 거리
 search.sort.filter.distance=최단 거리
 search.sort.filter.active=마지막 활성
 search.sort.filter.interests=이해
-search.sort.filter.donations=기부하다
 search.donation.popup=기부 하시겠습니까? 모든 페니는 새로운 사용자에게 다가 가고 새로운 기능을 추가하여 사용자 경험을 개선하는 데 도움이됩니다!
 search.js.error.no-geolocation=브라우저가 HTML5 위치 정보를 지원하지 않습니다. 다른 브라우저를 사용해보십시오.
 search.js.error.no-location=위치를 결정할 수 없습니다. GPS가 켜져 있는지 확인하십시오.
