--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -22,11 +22,13 @@ comment=Comentário
 contact=Contacto
 
 dark=Escuro
+default=Por defeito
 description=Descrição
 distance=Distância
 dob=Data de nascimento
 donate=Doações
 donated=Doado
+donations=Doações
 
 email=E-mail
 
@@ -177,7 +179,6 @@ search.max-distance=Distância máxima
 search.sort.filter.distance=Menor distância
 search.sort.filter.active=Último activo
 search.sort.filter.interests=Interesses
-search.sort.filter.donations=Doações
 search.donation.popup=Quer doar? Cada cêntimo ajuda-nos a chegar a novos utilizadores e a acrescentar novas funcionalidades para melhorar a sua experiência!
 search.js.error.no-geolocation=O seu navegador não suporta a geolocalização HTML5. Por favor, tente outro navegador.
 search.js.error.no-location=A posição não pôde ser determinada. Assegure-se de que o seu GPS está ligado.
