--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -22,11 +22,13 @@ comment=Комментарий
 contact=Контактная информация
 
 dark=Темный
+default=По умолчанию
 description=Описание
 distance=Расстояние
 dob=Дата рождения
 donate=Пожертвования
 donated=Пожертвовано
+donations=Пожертвования
 
 email=E-mail
 
@@ -177,7 +179,6 @@ search.max-distance=Максимальное расстояние
 search.sort.filter.distance=Наикратчайшее расстояние
 search.sort.filter.active=Последний активный
 search.sort.filter.interests=Интересы
-search.sort.filter.donations=Пожертвования
 search.donation.popup=Хочешь пожертвовать? Каждый цент помогает нам охватить новых пользователей и добавить новые функции для улучшения вашего опыта!
 search.js.error.no-geolocation=Ваш браузер не поддерживает геолокацию HTML5. Пожалуйста, попробуйте другой браузер.
 search.js.error.no-location=Позиция не может быть определена. Убедитесь, что ваш GPS включен.
