--- a/src/main/resources/i18n/messages_zh.properties
+++ b/src/main/resources/i18n/messages_zh.properties
@@ -22,11 +22,13 @@ comment=评论
 contact=联系我们
 
 dark=黑暗
+default=默认
 description=说明
 distance=距離
 dob=出生日期
 donate=捐赠
 donated=捐赠
+donations=捐赠
 
 email=电子邮件
 
@@ -177,7 +179,6 @@ search.max-distance=最大距离
 search.sort.filter.distance=最短距离
 search.sort.filter.active=最后活动
 search.sort.filter.interests=兴趣爱好
-search.sort.filter.donations=捐赠
 search.donation.popup=要不要捐款？每一分钱都能帮助我们接触到新的用户，并增加新的功能来改善您的体验!
 search.js.error.no-geolocation=您的浏览器不支持HTML5地理定位。请尝试其他浏览器。
 search.js.error.no-location=职位无法确定。确保你的GPS已经打开。
