--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -23,11 +23,13 @@ comment=Comment
 contact=Contact
 
 dark=Dark
+default=Default
 description=Description
 distance=Distance
 dob=Date of birth
 donate=Donate
 donated=Donated
+donations=Donations
 
 email=Email
 
@@ -180,7 +182,6 @@ search.max-distance=Maximum distance
 search.sort.filter.distance=Lowest distance
 search.sort.filter.active=Active date
 search.sort.filter.interests=Interests
-search.sort.filter.donations=Donations
 search.donation.popup=Do you want to donate? Each cent will help us reach out new users and add new features to improve the overall experience!
 search.js.error.no-geolocation=Your browser does not support HTML5 geolocation. Please try with another browser.
 search.js.error.no-location=Position could not be determined. Make sure that your GPS is turned on.
