Maximum file sizes for uploading images and audio

--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -9,6 +9,7 @@ success.submit.generic=Die Anfrage wurde erfolgreich übermittelt.
 error.max-chars.generic=Maximale Anzahl von Zeichen erreicht.
 error.password-weak=Passwort muss mindestens 7 Zeichen lang sein und Zeichen und Zahlen enthalten.
 error.password-no-match=Die Passwörter stimmen nicht überein.
+error.media.max-size-exceeded=Datei ist zu groß! Die maximale Größe beträgt 1MB.
 success.generic=Erfolg!
 
 
