--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -9,6 +9,7 @@ success.submit.generic=La demande a été soumise avec succès.
 error.max-chars.generic=Nombre maximum de caractères atteint.
 error.password-weak=Le mot de passe doit comporter au moins 7 caractères et contenir des caractères et des chiffres.
 error.password-no-match=Les mots de passe ne correspondent pas.
+error.media.max-size-exceeded=Le fichier est trop volumineux ! La taille maximale est de 1MB.
 success.generic=Succès!
 
 
