--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -9,6 +9,7 @@ success.submit.generic=La richiesta è stata presentata con successo.
 error.max-chars.generic=Numero massimo di caratteri raggiunto.
 error.password-weak=La password deve essere lunga almeno 7 caratteri e contenere caratteri e numeri.
 error.password-no-match=Le password non corrispondono.
+error.media.max-size-exceeded=Il file è troppo grande! La dimensione massima è 1MB.
 success.generic=Successo!
 
 
