--- a/src/main/resources/i18n/messages_ja.properties
+++ b/src/main/resources/i18n/messages_ja.properties
@@ -9,6 +9,7 @@ success.submit.generic=リクエストは正常に送信されました。
 error.max-chars.generic=最大文字数に到達しました。
 error.password-weak=パスワードは7文字以上で、文字と数字を含む必要があります。
 error.password-no-match=パスワードが一致しません。
+error.media.max-size-exceeded=ファイルが大きすぎます。最大サイズは1MBです。
 success.generic=成功！
 
 
