--- a/src/main/resources/i18n/messages_ko.properties
+++ b/src/main/resources/i18n/messages_ko.properties
@@ -9,6 +9,7 @@ success.submit.generic=요청이 성공적으로 제출되었습니다.
 error.max-chars.generic=최대 문자 수에 도달했습니다.
 error.password-weak=비밀번호는 7 자 이상이어야하며 문자와 숫자를 포함해야합니다.
 error.password-no-match=암호가 일치하지 않습니다.
+error.media.max-size-exceeded=파일이 너무 큽니다! 최대 크기는 1MB입니다.
 success.generic=성공!
 
 
