--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -9,6 +9,7 @@ success.submit.generic=Запрос был успешно подан.
 error.max-chars.generic=Максимальное количество достигнутых символов.
 error.password-weak=Пароль должен состоять не менее чем из 7 символов и содержать символы и цифры.
 error.password-no-match=Пароли не совпадают.
+error.media.max-size-exceeded=Файл слишком большой! Максимальный размер 1MB.
 success.generic=Успех!
 
 
