--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -10,6 +10,7 @@ error.generic=An error occured. Please try again.
 success.submit.generic=Your request has been successfully submitted.
 error.max-chars.generic=You have reached the maximum number of characters.
 error.password-weak=Your password needs to be at least 7 characters long and must contain characters and numbers.
+error.media.max-size-exceeded=File is too large! Maximum size is 1MB.
 error.password-no-match=Passwords do not match.
 success.generic=Success!
 
