Place oauth registration to top of page

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -60,6 +60,8 @@ message=Message
 new-password=New password
 no-users-found=No users found
 
+or=Or
+
 password=Password
 password-repeat=Repeat password
 privacy-policy=Privacy Policy
@@ -79,6 +81,8 @@ tos=Terms of Service
 website=Website
 
 # TEMPLATE #
+
+meta.content=Meet new people in your area!
 
 profile.warning.incomplete=User profile is incomplete, you won't be seen by other users.
 profile.warning.no-profile-picture=No profile picture found!
@@ -171,6 +175,7 @@ register.title=Register
 #register.gender.male=profile.gender.male
 #register.gender.female=profile.gender.female
 #register.gender.other=profile.gender.other
+register.email.sign-up=Sign up with email
 register.tos-agree=I agree to the <a href="/tos">Terms of Service</a>
 register.privacy-agree=I agree to the <a href="/privacy">Privacy Policy</a>
 register.asterisk-warning=Fields with an asterisk (*) cannot be changed in the future
