--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -58,6 +58,8 @@ message=Nachricht
 new-password=Neues Passwort
 no-users-found=Keine Nutzer gefunden
 
+or=Oder
+
 password=Passwort
 password-repeat=Password wiederholen
 privacy-policy=Datenschutzerklärung
@@ -167,6 +169,7 @@ register.title=Registrieren
 #register.gender.male=profile.gender.male
 #register.gender.female=profile.gender.female
 #register.gender.other=profile.gender.other
+register.email.sign-up=Mit E-Mail registrieren
 register.tos-agree=Ich stimme den <a href="/tos">Nutzungsbedingungen</a> zu
 register.privacy-agree=Ich stimme der <a href="/privacy">Datenschutzerklärung</a> zu
 register.asterisk-warning=Felder mit einem Sternchen (*) können in Zukunft nicht mehr geändert werden.
