--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -59,6 +59,8 @@ message=Mensaje
 new-password=Nueva contraseña
 no-users-found=No se han encontrado usuarios
 
+or=O
+
 password=Contraseña
 password-repeat=Repita la contraseña
 privacy-policy=Política de privacidad
@@ -168,6 +170,7 @@ register.title=Registrarse
 #register.gender.male=profile.gender.male
 #register.gender.female=profile.gender.female
 #register.gender.other=profile.gender.other
+register.email.sign-up=Regístrese con el correo electrónico
 register.tos-agree=Estoy de acuerdo con las <a href="/tos">condiciones de uso</a>
 register.privacy-agree=Estoy de acuerdo con la <a href="/privacy">declaración de protección de datos</a> 
 register.asterisk-warning=Los campos marcados con un asterisco (*) no pueden ser modificados en el futuro.
