--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -59,6 +59,8 @@ message=Message
 new-password=Nouveau mot de passe
 no-users-found=Aucun utilisateur trouvé
 
+or=Ou
+
 password=Mot de passe
 password-repeat=Répéter le mot de passe
 privacy-policy=Politique de confidentialité
@@ -168,6 +170,7 @@ register.title=S'inscrire
 #register.gender.male=profile.gender.male
 #register.gender.female=profile.gender.female
 #register.gender.other=profile.gender.other
+register.email.sign-up=S'inscrire avec l'email
 register.tos-agree=J'accepte les <a href="/tos">conditions d'utilisation</a>
 register.privacy-agree=Ich acceptent la <a href="/privacy">déclaration sur la protection des données</a>.
 register.asterisk-warning=Les champs marqués d'un astérisque (*) ne peuvent pas être modifiés à l'avenir.
