--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -59,6 +59,8 @@ message=Messaggio
 new-password=Nuova password
 no-users-found=Nessun utente trovato
 
+or=Oppure
+
 password=Password
 password-repeat=Ripetere la password
 privacy-policy=Informativa sulla privacy
@@ -168,6 +170,7 @@ register.title=Registrati
 #register.gender.male=profile.gender.male
 #register.gender.female=profile.gender.female
 #register.gender.other=profile.gender.other
+register.email.sign-up=Registrati con l'e-mail
 register.tos-agree=Accetto i <a href="/tos">Termini di utilizzo</a>
 register.privacy-agree=Accetto <a href="/privacy">l'informativa sulla privacy</a>
 register.asterisk-warning=I campi contrassegnati da un asterisco (*) non possono essere modificati in futuro.
