--- a/src/main/resources/i18n/messages_ja.properties
+++ b/src/main/resources/i18n/messages_ja.properties
@@ -59,6 +59,8 @@ message=メッセージ
 new-password=新しいパスワード
 no-users-found=ユーザーは見つかりませんでした。
 
+or=または
+
 password=パスワード
 password-repeat=パスワードを繰り返す
 privacy-policy=個人情報保護方針
@@ -168,6 +170,7 @@ register.title=登録
 #register.gender.male=profile.gender.male
 #register.gender.female=profile.gender.female
 #register.gender.other=profile.gender.other
+register.email.sign-up=メールでの登録
 register.tos-agree=私は<a href="/tos">利用規約</a>に同意します。
 register.privacy-agree=私は、<a href="/privacy">データ保護宣言</a>に同意します。
 register.asterisk-warning=アスタリスク(*)が付いている項目は、将来的に変更できません。
