--- a/src/main/resources/i18n/messages_ko.properties
+++ b/src/main/resources/i18n/messages_ko.properties
@@ -59,6 +59,8 @@ message=메시지
 new-password=새 비밀번호
 no-users-found=사용자가 없습니다.
 
+or=또는
+
 password=암호
 password-repeat=비밀번호 반복
 privacy-policy=데이터 보호
@@ -168,6 +170,7 @@ register.title=등록하다
 #register.gender.male=profile.gender.male
 #register.gender.female=profile.gender.female
 #register.gender.other=profile.gender.other
+register.email.sign-up=이메일로 등록
 register.tos-agree=<a href="/tos"> 이용 약관 </a>에 동의합니다.
 register.privacy-agree=<a href="/privacy"> 개인 정보 보호 정책 </a>에 동의합니다.
 register.asterisk-warning=별표 (*)가있는 필드는 나중에 변경할 수 없습니다.
