--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -59,6 +59,8 @@ message=Mensagem
 new-password=Nova palavra-passe
 no-users-found=Nenhum utilizador encontrado
 
+or=Ou
+
 password=Senha
 password-repeat=Repetir palavra-passe
 privacy-policy=Política de privacidade
@@ -168,6 +170,7 @@ register.title=Registar
 #register.gender.male=profile.gender.male
 #register.gender.female=profile.gender.female
 #register.gender.other=profile.gender.other
+register.email.sign-up=Registe-se com o e-mail
 register.tos-agree=Concordo com os <a href="/tos">Termos de utilização</a>
 register.privacy-agree=Concordo com a <a href="/privacy">política de privacidade</a>
 register.asterisk-warning=Os campos marcados com um asterisco (*) não podem ser alterados no futuro.
