--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -59,6 +59,8 @@ message=Сообщение
 new-password=Новый пароль
 no-users-found=Пользователи не найдены
 
+or=Или
+
 password=Пароль
 password-repeat=Повторить пароль
 privacy-policy=Политика конфиденциальности
@@ -168,6 +170,7 @@ register.title=Зарегистрироваться
 #register.gender.male=profile.gender.male
 #register.gender.female=profile.gender.female
 #register.gender.other=profile.gender.other
+register.email.sign-up=Зарегистрироваться по электронной почте
 register.tos-agree=Я согласен с <a href="/tos">Условия использования</a>
 register.privacy-agree=Я согласен с <a href="/privacy">заявлением о защитеданных</a>
 register.asterisk-warning=Поля, отмеченные звездочкой (*), не могут быть изменены в будущем.
