--- a/src/main/resources/i18n/messages_zh.properties
+++ b/src/main/resources/i18n/messages_zh.properties
@@ -59,6 +59,8 @@ message=留言内容
 new-password=新密码
 no-users-found=没有发现用户
 
+or=或
+
 password=密码
 password-repeat=重复密码
 privacy-policy=隐私权政策
@@ -168,6 +170,7 @@ register.title=注册
 #register.gender.male=profile.gender.male
 #register.gender.female=profile.gender.female
 #register.gender.other=profile.gender.other
+register.email.sign-up=用电子邮件注册
 register.tos-agree=我同意<a href="/tos">使用条款。
 register.privacy-agree=我同意<a href="/privacy">隐私声明</a>。
 register.asterisk-warning=标有星号(*)的字段今后不能更改。
