Change uploading file size limit to 2 MB

--- a/src/main/resources/i18n/messages_zh.properties
+++ b/src/main/resources/i18n/messages_zh.properties
@@ -9,7 +9,7 @@ success.submit.generic=请求已成功提交。
 error.max-chars.generic=达到的最大字符数。
 error.password-weak=密码必须至少有7个字符，并包含字符和数字。
 error.password-no-match=密码不匹配。
-error.media.max-size-exceeded=文件太大! 最大尺寸为1MB。
+error.media.max-size-exceeded=文件太大! 最大尺寸2MB。
 success.generic=成功了！
 
 
