Change dating preference to intention

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -88,7 +88,7 @@ meta.content=Meet new people in your area!
 profile.warning.incomplete=User profile is incomplete, you won't be seen by other users.
 profile.warning.no-profile-picture=No profile picture found!
 profile.warning.no-description=No description found!
-profile.warning.no-dating-preference=No dating preference found!
+profile.warning.no-intention=No intention found!
 profile.warning.no-gender-preference=No gender preference found!
 profile.warning.no-location=No location found! It will be set automatically when you search for other users!
 
