--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -84,7 +84,7 @@ website=Webseite
 profile.warning.incomplete=Dein Nutzerprofil ist unvollständig, und kann von anderen Nutzern nicht gesehen werden.
 profile.warning.no-profile-picture=Kein Profilbild gefunden!
 profile.warning.no-description=Keine Beschreibung gefunden!
-profile.warning.no-dating-preference=Keine Dating-Präferenz gefunden! 
+profile.warning.no-intention=Keine Intention gefunden!
 profile.warning.no-gender-preference=Keine Geschlechtspräferenz gefunden!
 profile.warning.no-location=Kein Standort gefunden! Dieser wird automatisch gesetzt, wenn nach anderen Nutzern gesucht wird!
 
