--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -85,7 +85,7 @@ website=Página web
 profile.warning.incomplete=Su perfil de usuario está incompleto y no puede ser visto por otros usuarios.
 profile.warning.no-profile-picture=¡No se encontró ninguna foto de perfil!
 profile.warning.no-description=¡No se encontró ninguna descripción!
-profile.warning.no-dating-preference=¡No se ha encontrado ninguna preferencia de cita! 
+profile.warning.no-intention=¡No se ha encontrado ninguna intención! 
 profile.warning.no-gender-preference=¡No se encontró ninguna preferencia de género!
 profile.warning.no-location=¡No se ha encontrado ningún lugar! ¡Esto se establecerá automáticamente cuando se busque a otros usuarios!
 
