--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -85,7 +85,7 @@ website=Site web
 profile.warning.incomplete=Votre profil d'utilisateur est incomplet et ne peut pas être vu par les autres utilisateurs.
 profile.warning.no-profile-picture=Aucune photo de profil trouvée!
 profile.warning.no-description=Aucune description trouvée!
-profile.warning.no-dating-preference=Aucune préférence de date trouvée!
+profile.warning.no-intention=Aucune intention trouvée!
 profile.warning.no-gender-preference=Aucune préférence de genre trouvée!
 profile.warning.no-location=Aucun emplacement trouvé ! Cette option sera automatiquement activée lors de la recherche d'autres utilisateurs!
 
