--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -85,7 +85,7 @@ website=Sito web
 profile.warning.incomplete=Il vostro profilo utente è incompleto e non può essere visto da altri utenti.
 profile.warning.no-profile-picture=Nessuna foto del profilo trovata!
 profile.warning.no-description=Nessuna descrizione trovata!
-profile.warning.no-dating-preference=Non è stata trovata nessuna preferenza per la datazione! 
+profile.warning.no-intention=Nessuna intenzione trovata!
 profile.warning.no-gender-preference=Nessuna preferenza di genere trovata!
 profile.warning.no-location=Nessuna posizione trovata! Questo verrà impostato automaticamente durante la ricerca di altri utenti!
 
