--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -85,7 +85,7 @@ website=Веб-сайт
 profile.warning.incomplete=Ваш пользовательский профиль неполный и не может быть замечен другими пользователями.
 profile.warning.no-profile-picture=Фотография профиля не найдена!
 profile.warning.no-description=Описание не найдено!
-profile.warning.no-dating-preference=Никаких предпочтений в свиданиях не найдено! 
+profile.warning.no-intention=Никаких намерений не найдено!
 profile.warning.no-gender-preference=Гендерные предпочтения не найдены!
 profile.warning.no-location=Местонахождение не найдено! Это будет установлено автоматически при поиске других пользователей!
 
