--- a/src/main/resources/i18n/messages_zh.properties
+++ b/src/main/resources/i18n/messages_zh.properties
@@ -85,7 +85,7 @@ website=网站建设
 profile.warning.incomplete=您的用户资料不完整，无法被其他用户看到。
 profile.warning.no-profile-picture=您的用户资料不完整，无法被其他用户看到。
 profile.warning.no-description=没有找到描述!
-profile.warning.no-dating-preference=没有找到约会的偏好! 
+profile.warning.no-intention=没有发现意图！
 profile.warning.no-gender-preference=没有找到性别偏好!
 profile.warning.no-location=没有找到位置! 在搜索其他用户时，会自动设置!
 
