--- a/src/main/resources/i18n/messages_ja.properties
+++ b/src/main/resources/i18n/messages_ja.properties
@@ -85,7 +85,7 @@ website=ウェブサイト
 profile.warning.incomplete=あなたのユーザープロフィールは不完全であり、他のユーザーからは見ることができません。
 profile.warning.no-profile-picture=プロフィール写真が見つかりませんでした
 profile.warning.no-description=記述は見つかりませんでした!
-profile.warning.no-dating-preference=デートの好みは見つかりませんでした! 
+profile.warning.no-intention=意図的なものはありません。
 profile.warning.no-gender-preference=性別の好みは見つかりませんでした
 profile.warning.no-location=場所は見つかりませんでした 他のユーザーを検索した時に自動的に設定されます!
 
