--- a/src/main/resources/i18n/messages_ko.properties
+++ b/src/main/resources/i18n/messages_ko.properties
@@ -85,7 +85,7 @@ website=Website
 profile.warning.incomplete=사용자 프로필이 불완전하며 다른 사용자가 볼 수 없습니다.
 profile.warning.no-profile-picture=프로필 사진이 없습니다!
 profile.warning.no-description=설명이 없습니다!
-profile.warning.no-dating-preference=선호하는 데이트가 없습니다!
+profile.warning.no-intention=의도가 없습니다!
 profile.warning.no-gender-preference=선호하는 성별이 없습니다!
 profile.warning.no-location=위치를 찾을 수 없습니다! 다른 사용자를 찾을 때 자동으로 설정됩니다!
 
