--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -85,7 +85,7 @@ website=Sítio Web
 profile.warning.incomplete=O seu perfil de utilizador está incompleto e não pode ser visto por outros utilizadores.
 profile.warning.no-profile-picture=Nenhuma foto de perfil encontrada!
 profile.warning.no-description=Nenhuma descrição encontrada!
-profile.warning.no-dating-preference=Nenhuma preferência de datação encontrada! 
+profile.warning.no-intention=Nenhuma intenção encontrada!
 profile.warning.no-gender-preference=Nenhuma preferência de género encontrada!
 profile.warning.no-location=Não foi encontrada nenhuma localização! Isto será definido automaticamente quando se procura por outros utilizadores!
 
