Added meta description for Google SEO

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -83,7 +83,7 @@ website=Website
 
 # TEMPLATE #
 
-meta.content=Meet new people in your area!
+meta.content=Meet new people in your area, absolutely privately using open-source technologies. You're only a few clicks away to find new friends, dating and sexual partners. Looking for a girlfriend, boyfriend, quick hookup, one-night stand or just someone with the same interests? No problem!
 
 profile.warning.incomplete=User profile is incomplete, you won't be seen by other users.
 profile.warning.no-profile-picture=No profile picture found!
