--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -81,6 +81,8 @@ website=Webseite
 
 # TEMPLATE #
 
+meta.content=Lern neue Leute in Deiner Umgebung kennen, absolut privat mit Open-Source-Technologien. Du bist nur ein paar Klicks entfernt, um neue Freunde, Dating- und Sexualpartner zu finden. Du suchst eine feste Freundin, einen festen Freund, eine schnelle Bekanntschaft, einen One-Night-Stand oder einfach jemanden mit den gleichen Interessen? Kein Problem!
+
 profile.warning.incomplete=Dein Nutzerprofil ist unvollständig, und kann von anderen Nutzern nicht gesehen werden.
 profile.warning.no-profile-picture=Kein Profilbild gefunden!
 profile.warning.no-description=Keine Beschreibung gefunden!
