--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -82,6 +82,8 @@ website=Página web
 
 # TEMPLATE #
 
+meta.content=Conoce a nuevas personas en tu zona, de forma totalmente privada con tecnologías de código abierto. Estás a unos pocos clics de encontrar nuevos amigos, citas y parejas sexuales. ¿Buscas una novia o un novio estable, una relación rápida, una aventura de una noche o simplemente alguien con tus mismos intereses? No hay problema.
+
 profile.warning.incomplete=Su perfil de usuario está incompleto y no puede ser visto por otros usuarios.
 profile.warning.no-profile-picture=¡No se encontró ninguna foto de perfil!
 profile.warning.no-description=¡No se encontró ninguna descripción!
