--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -82,6 +82,8 @@ website=Site web
 
 # TEMPLATE #
 
+meta.content=Rencontrez de nouvelles personnes dans votre région, en toute confidentialité grâce aux technologies open source. Vous n'êtes qu'à quelques clics de trouver de nouveaux amis, de nouvelles rencontres et de nouveaux partenaires sexuels. Vous cherchez une petite amie ou un petit ami stable, un coup rapide, un coup d'un soir, ou simplement quelqu'un qui partage les mêmes intérêts ? Pas de problème !
+
 profile.warning.incomplete=Votre profil d'utilisateur est incomplet et ne peut pas être vu par les autres utilisateurs.
 profile.warning.no-profile-picture=Aucune photo de profil trouvée!
 profile.warning.no-description=Aucune description trouvée!
