--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -82,6 +82,8 @@ website=Sito web
 
 # TEMPLATE #
 
+meta.content=Incontra nuove persone nella tua zona, completamente in privato con tecnologie open source. Sei solo a pochi click di distanza dal trovare nuovi amici, incontri e partner sessuali. Stai cercando una ragazza o un ragazzo fisso, un incontro veloce, un'avventura di una notte o semplicemente qualcuno con gli stessi interessi? Nessun problema!
+
 profile.warning.incomplete=Il vostro profilo utente è incompleto e non può essere visto da altri utenti.
 profile.warning.no-profile-picture=Nessuna foto del profilo trovata!
 profile.warning.no-description=Nessuna descrizione trovata!
