--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -82,6 +82,8 @@ website=Sítio Web
 
 # TEMPLATE #
 
+meta.content=Conheça novas pessoas na sua área, completamente em privado com tecnologias de código aberto. Está apenas a alguns cliques de encontrar novos amigos, encontros e parceiros sexuais. À procura de uma namorada ou namorado estável, um engate rápido, um encontro de uma noite, ou apenas alguém com os mesmos interesses? Não há problema!
+
 profile.warning.incomplete=O seu perfil de utilizador está incompleto e não pode ser visto por outros utilizadores.
 profile.warning.no-profile-picture=Nenhuma foto de perfil encontrada!
 profile.warning.no-description=Nenhuma descrição encontrada!
