Changed theme color to a colorful pink, may revert later, idk

--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -95,7 +95,7 @@ delete-account.confirm=Ich bestätige hiermit, mein Konto endgültig zu löschen
 delete-account.not-active=Link ist noch nicht aktiv. Bitte überprüfe die Anweisungen, die wir Dir gesendet haben, oder sende erneut einen Antrag zur Kontolöschung.
 
 donate.title=Spenden
-donate.notice-1=Achten darauf, die E-Mail-Adresse von deinem Konto im Nachrichten- oder Namensbereich einzutragen.
+donate.notice-1=Achte darauf, die E-Mail-Adresse von deinem Konto im Nachrichten- oder Namensbereich einzutragen.
 donate.notice-2=Verwende Stripe anstelle von PayPal, da die Gebühren viel niedriger sind.
 donate.latest-donations=Neueste Spenden
 donate.largest-donations=Größte Spenden
