Show blocked users in profile

--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -84,6 +84,9 @@ website=Página web
 
 meta.content=Conoce a nuevas personas en tu zona, de forma totalmente privada con tecnologías de código abierto. Estás a unos pocos clics de encontrar nuevos amigos, citas y parejas sexuales. ¿Buscas una novia o un novio estable, una relación rápida, una aventura de una noche o simplemente alguien con tus mismos intereses? No hay problema.
 
+blocked-users.title=Usuarios bloqueados
+profile.blocked-users=Mostrar usuarios bloqueados
+
 profile.warning.incomplete=Su perfil de usuario está incompleto y no puede ser visto por otros usuarios.
 profile.warning.no-profile-picture=¡No se encontró ninguna foto de perfil!
 profile.warning.no-description=¡No se encontró ninguna descripción!
