--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -84,6 +84,9 @@ website=Site web
 
 meta.content=Rencontrez de nouvelles personnes dans votre région, en toute confidentialité grâce aux technologies open source. Vous n'êtes qu'à quelques clics de trouver de nouveaux amis, de nouvelles rencontres et de nouveaux partenaires sexuels. Vous cherchez une petite amie ou un petit ami stable, un coup rapide, un coup d'un soir, ou simplement quelqu'un qui partage les mêmes intérêts ? Pas de problème !
 
+blocked-users.title=Utilisateurs bloqués
+profile.blocked-users=Afficher les utilisateurs bloqués
+
 profile.warning.incomplete=Votre profil d'utilisateur est incomplet et ne peut pas être vu par les autres utilisateurs.
 profile.warning.no-profile-picture=Aucune photo de profil trouvée!
 profile.warning.no-description=Aucune description trouvée!
