--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -84,6 +84,9 @@ website=Sito web
 
 meta.content=Incontra nuove persone nella tua zona, completamente in privato con tecnologie open source. Sei solo a pochi click di distanza dal trovare nuovi amici, incontri e partner sessuali. Stai cercando una ragazza o un ragazzo fisso, un incontro veloce, un'avventura di una notte o semplicemente qualcuno con gli stessi interessi? Nessun problema!
 
+blocked-users.title=Utenti bloccati
+profile.blocked-users=Mostra gli utenti bloccati
+
 profile.warning.incomplete=Il vostro profilo utente è incompleto e non può essere visto da altri utenti.
 profile.warning.no-profile-picture=Nessuna foto del profilo trovata!
 profile.warning.no-description=Nessuna descrizione trovata!
