--- a/src/main/resources/i18n/messages_ja.properties
+++ b/src/main/resources/i18n/messages_ja.properties
@@ -84,6 +84,9 @@ website=ウェブサイト
 
 meta.content=オープンソースの技術を使って、完全にプライベートな環境で、あなたの地域の新しい人々と出会うことができます。数回クリックするだけで、新しい友達、デート、セックスのパートナーを見つけることができます。安定したガールフレンドやボーイフレンドを探している方、すぐに付き合いたい方、一夜限りの関係を求めている方、同じ趣味を持つ方を探している方。問題なし!
 
+blocked-users.title=ブロックされたユーザー
+profile.blocked-users=ブロックされたユーザーを表示
+
 profile.warning.incomplete=あなたのユーザープロフィールは不完全であり、他のユーザーからは見ることができません。
 profile.warning.no-profile-picture=プロフィール写真が見つかりませんでした
 profile.warning.no-description=記述は見つかりませんでした!
