--- a/src/main/resources/i18n/messages_ko.properties
+++ b/src/main/resources/i18n/messages_ko.properties
@@ -78,11 +78,14 @@ subject=제목
 
 tos=이용 약관
 
-website=Website
+website=웹 사이트
 
 # TEMPLATE #
 
 meta.content=오픈 소스 기술로 완전히 비공개로 해당 지역의 새로운 사람들을 만나십시오. 클릭 몇 번이면 새로운 친구, 데이트 및 성 파트너를 만날 수 있습니다. 꾸준한 여자 친구 또는 남자 친구, 빠른 장애, 하룻밤 또는 같은 관심사를 가진 사람을 찾고 계십니까? 문제 없어요!
+
+blocked-users.title=차단 된 사용자
+profile.blocked-users=차단 된 사용자 표시
 
 profile.warning.incomplete=사용자 프로필이 불완전하며 다른 사용자가 볼 수 없습니다.
 profile.warning.no-profile-picture=프로필 사진이 없습니다!
