--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -84,6 +84,9 @@ website=Веб-сайт
 
 meta.content=Познакомьтесь с новыми людьми в вашем регионе, совершенно конфиденциально, с технологиями с открытым исходным кодом. Ты всего в нескольких кликах от поиска новых друзей, свиданий и сексуальных партнеров. Ищете постоянную девушку или парня, быструю подружку, на одну ночь или просто кого-нибудь с одинаковыми интересами? Без проблем!
 
+blocked-users.title=Заблокированные пользователи
+profile.blocked-users=Показать заблокированных пользователей
+
 profile.warning.incomplete=Ваш пользовательский профиль неполный и не может быть замечен другими пользователями.
 profile.warning.no-profile-picture=Фотография профиля не найдена!
 profile.warning.no-description=Описание не найдено!
