--- a/src/main/resources/i18n/messages_zh.properties
+++ b/src/main/resources/i18n/messages_zh.properties
@@ -84,6 +84,9 @@ website=网站建设
 
 meta.content=在你的区域内认识新的朋友，完全私下的开源技术。您只需点击几下就能找到新的朋友、约会和性伴侣。想找一个稳定的女朋友或男朋友，想找一个快速搭讪的人，想找一个一夜情的人，或者只是想找一个有相同兴趣的人？没问题！
 
+blocked-users.title=被屏蔽的用户
+profile.blocked-users=显示被屏蔽的用户
+
 profile.warning.incomplete=您的用户资料不完整，无法被其他用户看到。
 profile.warning.no-profile-picture=您的用户资料不完整，无法被其他用户看到。
 profile.warning.no-description=没有找到描述!
