--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -85,6 +85,9 @@ website=Website
 
 meta.content=Meet new people in your area, absolutely privately using open-source technologies. You're only a few clicks away to find new friends, dating and sexual partners. Looking for a girlfriend, boyfriend, quick hookup, one-night stand or just someone with the same interests? No problem!
 
+blocked-users.title=Blocked users
+profile.blocked-users=Show blocked users
+
 profile.warning.incomplete=User profile is incomplete, you won't be seen by other users.
 profile.warning.no-profile-picture=No profile picture found!
 profile.warning.no-description=No description found!
