--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -83,6 +83,9 @@ website=Webseite
 
 meta.content=Lern neue Leute in Deiner Umgebung kennen, absolut privat mit Open-Source-Technologien. Du bist nur ein paar Klicks entfernt, um neue Freunde, Dating- und Sexualpartner zu finden. Du suchst eine feste Freundin, einen festen Freund, eine schnelle Bekanntschaft, einen One-Night-Stand oder einfach jemanden mit den gleichen Interessen? Kein Problem!
 
+blocked-users.title=Blockierte Nutzer
+profile.blocked-users=Blockierte Nutzer anzeigen
+
 profile.warning.incomplete=Dein Nutzerprofil ist unvollständig, und kann von anderen Nutzern nicht gesehen werden.
 profile.warning.no-profile-picture=Kein Profilbild gefunden!
 profile.warning.no-description=Keine Beschreibung gefunden!
