Set accent color on every page when available.

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -14,6 +14,7 @@ error.media.max-size-exceeded=File is too large! Maximum size is 2MB.
 error.password-no-match=Passwords do not match.
 success.generic=Success!
 
+accent-color=Accent Color
 age=Age
 alerts=Alerts
 
