--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -12,7 +12,7 @@ error.password-no-match=Die Passwörter stimmen nicht überein.
 error.media.max-size-exceeded=Datei ist zu groß! Die maximale Größe beträgt 2MB.
 success.generic=Erfolg!
 
-
+accent-color=Akzentfarbe
 age=Alter
 alerts=Alarme
 
