--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -12,7 +12,7 @@ error.password-no-match=Las contraseñas no coinciden.
 error.media.max-size-exceeded=El archivo es demasiado grande. El tamaño máximo es de 2MB.
 success.generic=¡Éxito!
 
-
+accent-color=Color de acento
 age=Edad
 alerts=Alarmas
 
