--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -12,7 +12,7 @@ error.password-no-match=Les mots de passe ne correspondent pas.
 error.media.max-size-exceeded=Le fichier est trop volumineux ! La taille maximale est de 2MB.
 success.generic=Succès!
 
-
+accent-color=Couleur d'accent
 age=Âge
 alerts=Avertissements
 
