--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -12,7 +12,7 @@ error.password-no-match=Le password non corrispondono.
 error.media.max-size-exceeded=Il file è troppo grande! La dimensione massima è 2MB.
 success.generic=Successo!
 
-
+accent-color=Colore d'accento
 age=Età
 alerts=Allarmi
 
