--- a/src/main/resources/i18n/messages_ja.properties
+++ b/src/main/resources/i18n/messages_ja.properties
@@ -12,7 +12,7 @@ error.password-no-match=パスワードが一致しません。
 error.media.max-size-exceeded=ファイルが大きすぎます。最大サイズは2MBです。
 success.generic=成功！
 
-
+accent-color=アクセントカラー
 age=年齢
 alerts=アラーム
 
