--- a/src/main/resources/i18n/messages_ko.properties
+++ b/src/main/resources/i18n/messages_ko.properties
@@ -12,7 +12,7 @@ error.password-no-match=암호가 일치하지 않습니다.
 error.media.max-size-exceeded=파일이 너무 큽니다! 최대 크기는 2MB입니다.
 success.generic=성공!
 
-
+accent-color=강조 색상
 age=나이
 alerts=경보
 
