--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -12,7 +12,7 @@ error.password-no-match=Пароли не совпадают.
 error.media.max-size-exceeded=Файл слишком большой! Максимальный размер2MB.
 success.generic=Успех!
 
-
+accent-color=Цвет акцента
 age=Возраст
 alerts=Сигнализации
 
