--- a/src/main/resources/i18n/messages_zh.properties
+++ b/src/main/resources/i18n/messages_zh.properties
@@ -12,7 +12,7 @@ error.password-no-match=密码不匹配。
 error.media.max-size-exceeded=文件太大! 最大尺寸2MB。
 success.generic=成功了！
 
-
+accent-color=重点颜色
 age=年龄
 alerts=警报
 
