--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -12,7 +12,7 @@ error.password-no-match=As palavras-passe não coincidem.
 error.media.max-size-exceeded=O ficheiro é demasiado grande! O tamanho máximo é de 2MB.
 success.generic=Sucesso!
 
-
+accent-color=Sotaque Cor
 age=Idade
 alerts=Alarmes
 
